src/main/java/sl/fside/services/code_generator1/grammar/Python.g4
grammar Python;
prule: creators;
creators:  seq |alt| cond | para | loop | choice | seqSeq | repeat ;
seq: seqoptions;
seqoptions:seqBranch|seqConcur|seqPrime;
seqPrime:'Seq' twoArguments;
seqBranch:'Seq''('branch ','branchRe')';
seqConcur:'Seq''('concur ','concurRe')';
branch: 'Branch' threeArguments;
branchRe: 'BranchRe' threeArguments;
alt: 'Alt' threeArguments;
concur: 'Concur' threeArguments;
concurRe: 'ConcurRe' threeArguments;
cond: 'Cond' fourArguments;
para: 'Para' fourArguments;
loop: 'Loop' fourArguments;
choice: 'Choice' fourArguments;
seqSeq: 'SeqSeq' threeArguments;
repeat: 'Repeat' fourArguments;
twoArguments : '(' arg_python ',' arg_python ')';
threeArguments : '(' arg_python ',' arg_python ',' arg_python ')';
fourArguments : '(' arg_python ',' arg_python ',' arg_python ',' arg_python ')';
function: CharArray '(' (arg_python',')*(arg_python)* ')';
arg_python:  prule | function | string |special_String;
special_String:'#'CharArray'#';
string: CharArray;
CharArray: [a-zA-Z0-9_]+ [a-zA-Z0-9_;+ =!<>%?-]*;
